--- a/projectStyle.css
+++ b/projectStyle.css
@@ -7,6 +7,7 @@ html, body {
   margin: 0;
   overflow-x: hidden;
   overflow-y: scroll;
+  -webkit-box-sizing: border-box;  box-sizing: border-box;
 }
 
 a {
@@ -318,7 +319,7 @@ i {
 
 
 section {
-  width: 100vw;
+  width: 100%;
   margin-bottom: calc(40px + 5%);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -332,13 +333,9 @@ section {
           align-items: center;
 }
 
-section.not-fullscreen {
-  width: calc(100% - 8%);
-  margin-left: 4%;
-}
 
-  img.fullscreen-img {
-    width: 100%;
+  img.not-fullscreen-img {
+    width: 92%;
     height: auto;
   }
 
@@ -369,6 +366,11 @@ section.not-fullscreen {
     -ms-flex-wrap: wrap-reverse;
         flex-wrap: wrap-reverse;
   }
+  .wrapper.not-fullscreen {
+    width: 92%;
+  }
+
+
 
 
   .block {
@@ -687,11 +689,14 @@ section.project-intro {
       padding-bottom: 5%;
     }
 
-section#schecker-draggable-flow {
+#schecker-draggable-flow {
   background-color: #e0dfdf;
-  width: auto;
-  height: 700px;
+  width: 100%;
+  height: 650px;
   padding-top: 1%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .light-bg-f9f9f9 {
