--- a/projectStyle.css
+++ b/projectStyle.css
@@ -5,6 +5,9 @@ html, body {
   color: #2A2F36;
   width: 100vw;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   overflow-x: hidden;
   overflow-y: scroll;
   -webkit-box-sizing: border-box;  box-sizing: border-box;
@@ -331,8 +334,43 @@ section {
   -webkit-box-align: center;
   -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
+.project-hero-img {
+  width: 100%;
+  height: 75vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-size: cover;
+  resize: both;
+  background-repeat: no-repeat;
+  background-position: center;
+  object-fit: cover;
+  background-attachment: fixed;
+  margin-bottom: 4%;
+}
+
+
+.intro-fullscreen-bg {
+  width: 100%;
+  height: auto;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  object-fit: cover;
+}
 
   img.not-fullscreen-img {
     width: 92%;
@@ -340,7 +378,7 @@ section {
   }
 
   section h3 {
-    margin: 5% auto;
+    margin-bottom: 5%;
   }
 
 
@@ -366,12 +404,13 @@ section {
     -ms-flex-wrap: wrap-reverse;
         flex-wrap: wrap-reverse;
   }
-  .wrapper.not-fullscreen {
+  .not-fullscreen {
     width: 92%;
   }
 
-
-
+  .light-bg-f9f9f9 {
+    background-color: #F9F9F9;
+  }
 
   .block {
     display: -webkit-box;
@@ -384,6 +423,10 @@ section {
     width: 40%;
     height: auto;
     margin: 5% auto;
+  }
+
+  .project-intro .block {
+    margin: 0 auto;
   }
 
       .block video {
@@ -505,12 +548,15 @@ section {
 
 
 footer {
+  width: 100%;
+  height: auto;
   position: relative;
   z-index: 1000;
   left: 0;
   bottom: 0;
   right: 0;
   padding: 25px;
+  box-sizing: border-box;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -531,7 +577,11 @@ footer {
       letter-spacing: .1em;
       font-size: .7em;
     }
-    .footer-links {text-align: right;}
+    .footer-links {
+      text-align: right;
+      display: flex;
+      flex-flow: row wrap;
+    }
     .footer-links a {
       color: #8C9BAF;
       letter-spacing: .1em;
@@ -627,41 +677,7 @@ footer {
 
 
 
-/* ---------------------------------------- Project Intro Section ------------------------------------------ */
-
-
-section.project-intro {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-  .project-intro .block {
-    margin: 0 auto;
-  }
-
-  .project-hero-img {
-    width: 100%;
-    height: 500px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
+/* ---------------------------------------- Schecker ------------------------------------------ */
 
     #schecker-hero img {
       width: 55%;
@@ -672,6 +688,7 @@ section.project-intro {
 
     #schecker-hero {
       position: relative;
+      margin-bottom: 0;
     }
     #schecker-hero:before {
       content: "";
@@ -699,9 +716,6 @@ section.project-intro {
   align-items: center;
 }
 
-.light-bg-f9f9f9 {
-  background-color: #F9F9F9;
-}
 
 #schecker-viewInvisionCTA {
   display: none;
@@ -713,13 +727,8 @@ section.project-intro {
 
 
 section#mpf-intro {
-    background-color: #20022B;
-    padding-top: calc(25px + 5%);
-    padding-bottom: calc(25px + 5%);
+    background-image: url("./Assets/mpf-bg.svg");
   }
-      #mpf-intro h2, #mpf-intro p {
-        color: #8C9BAF;
-      }
 
       img#mpf-cover {
         width: 100%;
@@ -750,7 +759,12 @@ section#mpf-intro {
 
 
 
+/* ------------------------------------------- WishUp -------------------------------------------- */
 
+#wishup-hero-img {
+  background-image: url("./Assets/camper-campsite-car-753603.jpg");
+  background-position: 62% bottom;
+}
 
 
 
@@ -766,6 +780,7 @@ section#mpf-intro {
           transform: translateY(150px);
   -webkit-animation: come-in 1s ease forwards;
           animation: come-in 1s ease forwards;
+  opacity: 0;
 }
 
 .come-in:nth-child(odd) {
@@ -774,11 +789,11 @@ section#mpf-intro {
 }
 
 @-webkit-keyframes come-in {
-  to {-webkit-transform: translateY(0);transform: translateY(0);}
+  to {-webkit-transform: translateY(0);transform: translateY(0);opacity: 1}
 }
 
 @keyframes come-in {
-  to {-webkit-transform: translateY(0);transform: translateY(0);}
+  to {-webkit-transform: translateY(0);transform: translateY(0); opacity: 1;}
 }
 
 .already-visible {
@@ -787,11 +802,17 @@ section#mpf-intro {
           transform: translateY(0);
   -webkit-animation: none;
           animation: none;
+  opacity: 1;
 }
 
 /* ------------------------------------------------------------------------------------------- */
 
 @media screen and (max-width: 731px) {
+
+.intro-fullscreen-bg {
+  padding-top: calc(60px + 5%);
+  padding-bottom: 5%;
+}
 
   .block {
     width: 100%;
@@ -800,16 +821,20 @@ section#mpf-intro {
 
 
 footer {
+  flex-direction: column-reverse;
+  align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
   .footer-links {
-    margin-top: 25px;
     text-align: center;
+    justify-content: center;
+    /* flex-direction: column; */
   }
     .footer-links a {
       text-align: center;
+      margin-bottom: 25px;
     }
 
 }
@@ -819,18 +844,6 @@ footer {
 
 
 @media screen and (max-width: 375px) {
-
-
-}
-
-@media screen and (max-width: 320px) {
-  .hiw.input span.text-field {
-    font-size: 1.3em;
-  }
-  .hiw-text-animation {
-    font-size: 1.3em;
-  }
-
   #schecker-viewInvision {
     display: none;
   }
@@ -849,4 +862,15 @@ footer {
         -ms-flex-pack: center;
             justify-content: center;
   }
+
+}
+
+@media screen and (max-width: 320px) {
+  .hiw.input span.text-field {
+    font-size: 1.3em;
+  }
+  .hiw-text-animation {
+    font-size: 1.3em;
+  }
+
 }
