--- a/projectStyle.css
+++ b/projectStyle.css
@@ -852,7 +852,7 @@ footer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 280px;
+    width: 90vw;
     height: 60px;
     border: solid 1px red;
     -webkit-box-align: center;
@@ -861,6 +861,7 @@ footer {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    align-self: center;
   }
 
 }
