--- a/projectStyle.css
+++ b/projectStyle.css
@@ -43,6 +43,9 @@ p {
   font-weight: 400;
   line-height: 2rem;
 }
+p.centered-text {
+  max-width: 60%;
+}
 
 p strong {
   font-size: .95rem;
@@ -355,7 +358,8 @@ section {
   resize: both;
   background-repeat: no-repeat;
   background-position: center;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   background-attachment: fixed;
   margin-bottom: 4%;
 }
@@ -588,7 +592,8 @@ footer {
       font-size: .8em;
       font-weight: 700;
       text-align: right;
-      margin-left: 25px;
+      margin-left: 13px;
+      margin-right: 13px;
     }
       .footer-links a:hover {
         color: #F3425E;
@@ -736,11 +741,14 @@ section#mpf-intro {
       }
 
       img.user-example {
-        width: 40%;
+        width: 30%;
         height: auto;
       }
       img#rachels-dad {
-        width: 30%;
+        width: 20%;
+      }
+      img#rachels-granny {
+        width: 80%;
       }
       img.appScreen {
         width: 300px;
@@ -766,6 +774,17 @@ section#mpf-intro {
   background-position: 62% bottom;
 }
 
+section#wishup-why {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  background-image: url("./Assets/up-wallpaper.jpg");
+  background-color: #e6edf6;
+  background-position: center;
+  background-attachment: fixed;
+}
+section#wishup-why h3 {
+  color: black;
+}
 
 
 
@@ -830,7 +849,6 @@ footer {
   .footer-links {
     text-align: center;
     justify-content: center;
-    /* flex-direction: column; */
   }
     .footer-links a {
       text-align: center;
