--- a/projectStyle.css
+++ b/projectStyle.css
@@ -358,8 +358,8 @@ section {
   resize: both;
   background-repeat: no-repeat;
   background-position: center;
-  -o-object-fit: cover;
-     object-fit: cover;
+  /* -o-object-fit: cover;
+     object-fit: cover; */
   background-attachment: fixed;
   margin-bottom: 4%;
 }
@@ -373,7 +373,8 @@ section {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
   img.not-fullscreen-img {
