--- a/projectStyle.css
+++ b/projectStyle.css
@@ -359,10 +359,12 @@ section {
     .hero-img {
       width: 100%;
       height: 100%;
+      min-width: 100vw;
+      min-height: 75vh;
       background-size: cover;
       resize: both;
       background-repeat: no-repeat;
-      background-position: center;
+      background-position: center center;
       -o-object-fit: cover;
          object-fit: cover;
       background-attachment: fixed;
