--- a/projectStyle.css
+++ b/projectStyle.css
@@ -345,8 +345,8 @@ section {
 .project-hero {
   width: 100vw;
   height: 75vh;
-  min-width: 100vw;
-  min-height: 75vh;
+  min-width: 375px;
+  min-height: 800px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
