--- a/projectStyle.css
+++ b/projectStyle.css
@@ -345,11 +345,10 @@ section {
 .project-hero {
   width: 100vw;
   height: 75vh;
-  min-width: 375px;
-  min-height: 800px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -357,16 +356,13 @@ section {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 4%;
-  overflow: hidden;
 }
     .hero-img {
       width: 100%;
       height: 100%;
       background-size: cover;
       background-repeat: no-repeat;
-      background-position: center center;
-      -o-object-fit: cover;
-         object-fit: cover;
+      background-position: center;
       background-attachment: fixed;
     }
 
