--- a/projectStyle.css
+++ b/projectStyle.css
@@ -371,13 +371,14 @@ section {
 .intro-fullscreen-bg {
   width: 100%;
   height: auto;
-  min-height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   -o-object-fit: cover;
      object-fit: cover;
+ padding-top: calc(60px + 5%);
+ padding-bottom: 5%;
 }
 
   img.not-fullscreen-img {
@@ -412,6 +413,11 @@ section {
     -ms-flex-wrap: wrap-reverse;
         flex-wrap: wrap-reverse;
   }
+  .big-col {
+    flex-direction: column;
+    width: 80%;
+  }
+
   .not-fullscreen {
     width: 92%;
   }
@@ -419,6 +425,10 @@ section {
   .light-bg-f9f9f9 {
     background-color: #F9F9F9;
   }
+
+      .wrapper h5 {
+        margin-bottom: 3%;
+      }
 
   .block {
     display: -webkit-box;
@@ -433,17 +443,22 @@ section {
     margin: 5% auto;
   }
 
+  .big-block {
+    width: 60%;
+  }
+
+  .small-block {
+    width: 20%;
+  }
+    .small-block h5,
+    .small-block p {
+      text-align: center;
+    }
+
   .project-intro .block {
     margin: 0 auto;
   }
 
-      .block video {
-        width: 300px;
-        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
-      }
-      img.appScreen {
-        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
-      }
 
   .no-text-block {
     -webkit-box-align: center;-ms-flex-align: center;align-items: center;
@@ -451,6 +466,18 @@ section {
 
     .no-text-block img {
       width: 100%;
+    }
+
+    img.appScreen,
+    video.appScreen {
+      width: 300px;
+      height: auto;
+      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
+    }
+    .desktop-screen {
+      width: 100%;
+      height: auto;
+      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
     }
 
 
@@ -692,17 +719,18 @@ footer {
 
 /* ---------------------------------------- Schecker ------------------------------------------ */
 
+#schecker-hero {
+  position: relative;
+  margin-bottom: 0;
+}
+
     #schecker-hero img {
       width: 55%;
-      min-width: 320px;
+      min-width: 290px;
       height: auto;
       margin-top: 8%;
     }
 
-    #schecker-hero {
-      position: relative;
-      margin-bottom: 0;
-    }
     #schecker-hero:before {
       content: "";
       width: 100%;
@@ -744,7 +772,12 @@ footer {
 
 
 section#mpf-intro {
-    background-image: url("./Assets/mpf-bg.svg");
+    background-color: #778899;
+  }
+
+  section#mpf-intro h2,
+  section#mpf-intro p {
+    color: white;
   }
 
       img#mpf-cover {
@@ -762,10 +795,7 @@ section#mpf-intro {
       img#rachels-granny {
         width: 80%;
       }
-      img.appScreen {
-        width: 300px;
-        height: auto;
-      }
+
 
     .rachel {
       background-color: #F4F3ED;
@@ -787,19 +817,57 @@ section#mpf-intro {
 }
 
 section#wishup-why {
-  background-image: url("./Assets/up-wallpaper.jpg");
+  background-image: url("./Assets/up-wallpaper.png");
+  background-position: 10% 50%;
+  background-size: 18%;
   background-color: #e6edf6;
   padding-top: 4%;
   padding-bottom: 4%;
   margin-bottom: 9%;
 }
-section#wishup-why h3 {
-  color: black;
+  section#wishup-why h3 {
+    color: black;
+  }
+  section#wishup-why .block {
+    margin-top: 0;
+  }
+
+  section#wishup-remember h3 {
+    margin-bottom: 0;
+  }
+
+
+
+/* ------------------------------------------- Bardot -------------------------------------------- */
+
+#bardot-hero-img {
+  background-image: url("./Assets/BardotCampaign(5).jpg");
 }
 
-    /* #wishup-intro-video {
-      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
-    } */
+section#bardot-challenge {
+  padding-top: 5%;
+  background-color: black;
+}
+  section#bardot-challenge h3 {
+    margin-bottom: 0;
+  }
+  section#bardot-challenge p {
+    color: #8C9BAF;
+  }
+
+section#bardot-home .big-col {
+  margin-bottom: 5%;
+}
+
+    img#bardot-findStore-img {
+      box-shadow: none;
+    }
+
+section#bardot-screenCollage img {
+  width: 100%;
+  height: auto;
+}
+
 
 
 
@@ -809,17 +877,17 @@ section#wishup-why h3 {
 /* ----------------------------- scroll slide in ---------------------------------- */
 
 .come-in {
-  -webkit-transform: translateY(150px);
-      -ms-transform: translateY(150px);
-          transform: translateY(150px);
-  -webkit-animation: come-in 1s ease forwards;
-          animation: come-in 1s ease forwards;
+  -webkit-transform: translateY(80px);
+      -ms-transform: translateY(80px);
+          transform: translateY(80px);
+  -webkit-animation: come-in 1.5s ease forwards;
+          animation: come-in 1.5s ease forwards;
   opacity: 0;
 }
 
 .come-in:nth-child(odd) {
-  -webkit-animation-duration: .8s;
-          animation-duration: .8s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
 }
 
 @-webkit-keyframes come-in {
@@ -839,13 +907,29 @@ section#wishup-why h3 {
   opacity: 1;
 }
 
-/* ------------------------------------------------------------------------------------------- */
+/* -------------------------------------------- media query ------------------------------------- */
 
-@media screen and (max-width: 731px) {
+
+@media screen and (max-width: 1024px) {
+  #schecker-hero {
+    margin-top: 15%;
+    height: auto;
+  }
+
+      #schecker-hero img {
+        width: 80%;
+      }
+
+      #schecker-hero:before {
+        height: 100px;
+      }
+}
+
+
+
+@media screen and (max-width: 768px) {
 
 .intro-fullscreen-bg {
-  padding-top: calc(60px + 5%);
-  padding-bottom: 5%;
   background-attachment: scroll;
 }
 
@@ -857,6 +941,9 @@ section#wishup-why h3 {
     width: 100%;
   }
 
+.big-col {
+  width: 100%;
+}
 
 
 footer {
