--- a/projectStyle.css
+++ b/projectStyle.css
@@ -831,27 +831,10 @@ section#mpf-intro {
         height: auto;
       }
 
-      img.user-example {
-        width: 30%;
-        height: auto;
-      }
-      img#rachels-dad {
-        width: 20%;
-      }
-      img#rachels-granny {
-        width: 80%;
-      }
+section#mpf-early-concept h3 {
+  margin-bottom: 0;
+}
 
-
-    .rachel {
-      background-color: #F4F3ED;
-    }
-    .dad {
-      background-color: #E4EFE7;
-    }
-    .granny {
-      background-color: #F2EDF1;
-    }
 
 
 
@@ -960,31 +943,32 @@ section#bardot-learnings h3 {
 
 
 @media screen and (max-width: 1024px) {
-  #schecker-hero {
-    margin-top: 15%;
-    height: auto;
+
+  .intro-fullscreen-bg {
+    background-attachment: scroll;
   }
 
-      #schecker-hero img {
-        width: 80%;
+  .hero-img {
+    background-attachment: scroll;
+  }
+
+      #schecker-hero {
+        margin-top: 15%;
+        height: auto;
       }
 
-      #schecker-hero:before {
-        height: 100px;
-      }
+          #schecker-hero img {
+            width: 80%;
+          }
+
+          #schecker-hero:before {
+            height: 100px;
+          }
 }
 
 
 
 @media screen and (max-width: 768px) {
-
-.intro-fullscreen-bg {
-  background-attachment: scroll;
-}
-
-.hero-img {
-  background-attachment: scroll;
-}
 
   .block {
     width: 100%;
@@ -1012,6 +996,10 @@ section#bardot-learnings h3 {
     }
 
 }
+
+        section#wishup-why {
+          background-position: 7% 10%;
+        }
 
 /* ------------------------------------------------------------------------------------ */
 
