--- a/projectStyle.css
+++ b/projectStyle.css
@@ -419,24 +419,31 @@ section {
     -ms-flex-wrap: wrap-reverse;
         flex-wrap: wrap-reverse;
   }
+
+  .big-img-wrapper {
+    width: 100%;
+  }
+    .big-img-wrapper img {
+      width: 100%;
+      height: auto;
+    }
+    .big-img-wrapper h5 {
+      margin-top: calc(25px + 5%);
+      margin-bottom: 25px;
+    }
+
   .big-col {
     flex-direction: column;
     width: 80%;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
   }
 
-  .not-fullscreen {
-    width: 92%;
-  }
 
   .light-bg-f9f9f9 {
     background-color: #F9F9F9;
     width: 100%;
   }
 
-      .wrapper h5 {
-        margin: 3% 0;
-      }
 
   .block {
     display: -webkit-box;
@@ -918,7 +925,9 @@ section#sa-challenge {
     #sa-challenge h3, #sa-challenge p {color: black;}
     #sa-challenge h3 {margin-bottom: 0;}
 
-
+    #sa-info-m-img-block {
+      margin-bottom: 0;
+    }
 
 
 
