--- a/projectStyle.css
+++ b/projectStyle.css
@@ -5,9 +5,16 @@ html, body {
   color: #2A2F36;
   width: 100vw;
   margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+          align-items: center;
   overflow-x: hidden;
   overflow-y: scroll;
   -webkit-box-sizing: border-box;  box-sizing: border-box;
@@ -421,7 +428,7 @@ section {
     }
 
   .big-col {
-    flex-direction: column;
+    -webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;
     width: 80%;
     margin-bottom: 10%;
   }
@@ -475,12 +482,12 @@ section {
     video.appScreen {
       width: 300px;
       height: auto;
-      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
+      -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
     }
     .desktop-screen {
       width: 100%;
       height: auto;
-      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
+      -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
     }
     .noShadow-img {
       width: 100%;
@@ -600,7 +607,7 @@ footer {
   left: 0;
   bottom: 0;
   right: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;box-sizing: border-box;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -610,17 +617,32 @@ footer {
     width: 100%;
     height: auto;
     padding: 5%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-sizing: border-box;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     background-color: #D2DBE9;
   }
     .footer-top-links {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-flow: row wrap;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+              flex-flow: row wrap;
       text-align: center;
-      justify-content: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+              justify-content: center;
     }
       .footer-top-links a {
         margin: 20px;
@@ -649,7 +671,7 @@ footer {
         -ms-flex-pack: justify;
             justify-content: space-between;
     background-color: #EBEEF3;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;box-sizing: border-box;
   }
     .copyright {
       color: #8C9BAF;
@@ -658,8 +680,13 @@ footer {
     }
     .footer-links {
       text-align: right;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-flow: row wrap;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+              flex-flow: row wrap;
     }
     .footer-links a {
       color: #8C9BAF;
@@ -794,7 +821,7 @@ footer {
     }
 
 #schecker-hiw-section video {
-  box-shadow: none;
+  -webkit-box-shadow: none;box-shadow: none;
 }
 
 #schecker-draggable-flow {
@@ -802,9 +829,16 @@ footer {
   width: 100%;
   height: 650px;
   padding-top: 1%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+          align-items: center;
 }
 
 
@@ -886,7 +920,7 @@ section#bardot-challenge {
 
 
     img#bardot-findStore-img {
-      box-shadow: none;
+      -webkit-box-shadow: none;box-shadow: none;
     }
 
 section#bardot-screenCollage img {
@@ -1014,7 +1048,9 @@ section#credits a {
 }
   .footer-links {
     text-align: center;
-    justify-content: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+            justify-content: center;
   }
     .footer-links a {
       text-align: center;
@@ -1049,7 +1085,8 @@ section#credits a {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    align-self: center;
+    -ms-flex-item-align: center;
+        align-self: center;
   }
 
   .block {
