--- a/projectStyle.css
+++ b/projectStyle.css
@@ -825,10 +825,10 @@ footer {
 }
 
 #schecker-draggable-flow {
-  background-color: #e0dfdf;
   width: 100%;
-  height: 650px;
-  padding-top: 1%;
+  height: 95vh;
+  padding-top: 5%;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -840,6 +840,16 @@ footer {
   -ms-flex-align: center;
           align-items: center;
 }
+    #schecker-zoom-btn {
+      position: absolute;
+      top: 35%;
+      z-index: 9000;
+      transition: .5s;
+      cursor: pointer;
+    }
+    #schecker-zoom-btn:hover {
+      transform: scale(.9);
+    }
 
 
 #schecker-viewInvisionCTA {
