--- a/projectStyle.css
+++ b/projectStyle.css
@@ -841,8 +841,8 @@ footer {
           align-items: center;
 }
     #schecker-zoom-btn {
-      position: absolute;
-      top: 30%;
+      position: relative;
+      top: 10%;
       z-index: 9000;
       cursor: pointer;
     }
