--- a/projectStyle.css
+++ b/projectStyle.css
@@ -477,6 +477,10 @@ section {
     .no-text-block img {
       width: 100%;
     }
+  .no-margin-top {
+    margin-top: 0;
+  }
+
 
     img.appScreen,
     video.appScreen {
@@ -843,7 +847,7 @@ footer {
 }
     #schecker-zoom-btn {
       position: absolute;
-      top: 30%;
+      top: 35%;
       z-index: 9000;
       cursor: pointer;
     }
