--- a/projectStyle.css
+++ b/projectStyle.css
@@ -415,30 +415,40 @@ section {
         flex-wrap: wrap-reverse;
   }
 
-  .big-img-wrapper {
+  /* .big-img-wrapper {
     width: 100%;
-  }
-    .big-img-wrapper img {
+  } */
+    /* .big-img-wrapper img {
       width: 100%;
       height: auto;
     }
     .big-img-wrapper h5 {
       margin-top: calc(25px + 5%);
       margin-bottom: 25px;
-    }
+    } */
 
   .big-col {
     -webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;
-    width: 80%;
-    margin-bottom: 10%;
+    width: 100%;
+    margin: 10% auto;
   }
+      .big-col img,
+      .big-col video {
+        width: 80%;
+        height: auto;
+      }
 
 
   .light-bg-f9f9f9 {
     background-color: #F9F9F9;
     width: 100%;
+    padding-top: 10%;
+    padding-bottom: 10%;
   }
-
+  .big-col.light-bg-f9f9f9 {
+    margin-top: 5%;
+    margin-bottom: 0;
+  }
 
   .block {
     display: -webkit-box;
@@ -489,7 +499,7 @@ section {
       -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
     }
     .desktop-screen {
-      width: 100%;
+      width: 80%;
       height: auto;
       -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
     }
