--- a/projectStyle.css
+++ b/projectStyle.css
@@ -415,18 +415,6 @@ section {
         flex-wrap: wrap-reverse;
   }
 
-  /* .big-img-wrapper {
-    width: 100%;
-  } */
-    /* .big-img-wrapper img {
-      width: 100%;
-      height: auto;
-    }
-    .big-img-wrapper h5 {
-      margin-top: calc(25px + 5%);
-      margin-bottom: 25px;
-    } */
-
   .big-col {
     -webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;
     width: 100%;
@@ -489,6 +477,9 @@ section {
     }
   .no-margin-top {
     margin-top: 0;
+  }
+  .add-margin-bottom {
+    margin-bottom: 5%;
   }
 
 
