final final final

--- a/myStyle.css
+++ b/myStyle.css
@@ -293,7 +293,7 @@ a#emailIcon {
               content: "Intro";
             }
             .section-bullet:nth-child(2):before {
-              content: "Schecker";
+              content: "Featured";
             }
             .section-bullet:nth-child(3):before {
               content: "Exp.";
@@ -580,6 +580,7 @@ section.intro {
 
 /* Side Projects Section */
 section.side-projects {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -730,8 +731,8 @@ section.side-projects {
 /* Other concepts section */
 #other-concepts {
   background-color: black;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-top: 7%;
+  padding-bottom: 7%;
 }
 
 #other-concepts .content-column {
@@ -824,8 +825,10 @@ section.side-projects {
 
 
   /* Works Showcase */
-#works {
+section#works {
   background-color: #EBEEF3;
+  padding-top: 7%;
+  padding-bottom: 7%;
 }
 
 .project-tile {
@@ -834,7 +837,7 @@ section.side-projects {
   min-width: 310px;
   min-height: 310px;
   overflow: hidden;
-  margin: 2%;
+  margin: 5% 2%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -869,6 +872,46 @@ section.side-projects {
       -webkit-box-shadow: 4px 2px 10px 0 rgba(0,0,0,0.30);
               box-shadow: 4px 2px 10px 0 rgba(0,0,0,0.30);
     }
+
+
+#other-works-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+    #other-works-wrapper p {
+      width: 60%;
+      text-align: center;
+    }
+    #other-works-wrapper .logos {
+      width: 90%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-flow: row wrap;
+              flex-flow: row wrap;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+
+    }
+
+          .logos a img {
+            width: 100%;
+            height: auto;
+          }
+          .logos a {
+              width: 180px;
+              height: auto;
+              margin: 4%;
+          }
 
 
 
