--- a/myStyle.css
+++ b/myStyle.css
@@ -876,10 +876,19 @@ section#works {
 
 #other-works-wrapper {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+          justify-content: center;
 }
     #other-works-wrapper p {
       width: 60%;
@@ -971,6 +980,9 @@ footer {
   }
   .device-wrapper {
     width: 100%;
+  }
+  #other-works-wrapper p {
+    width: 90%;
   }
   .project-tile {
     width: 100%;
