--- a/myStyle.css
+++ b/myStyle.css
@@ -1023,6 +1023,11 @@ footer {
   }
 
 
+@media screen and (max-width: 375px) {
+  h3 {margin: auto 10px;}
+}
+
+
 @media screen and (max-width: 320px) {
   a.CTAarrow {
     display: none;
