--- a/myStyle.css
+++ b/myStyle.css
@@ -831,6 +831,11 @@ section#works {
   padding-bottom: 7%;
 }
 
+  #works p {
+    width: 60%;
+    text-align: center;
+  }
+
 .project-tile {
   width: 42vw;
   height: 60vh;
@@ -876,6 +881,7 @@ section#works {
 
 #other-works-wrapper {
   width: 100%;
+  margin-top: 3%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -890,10 +896,7 @@ section#works {
   -ms-flex-pack: center;
           justify-content: center;
 }
-    #other-works-wrapper p {
-      width: 60%;
-      text-align: center;
-    }
+
     #other-works-wrapper .logos {
       width: 90%;
       display: -webkit-box;
@@ -975,15 +978,24 @@ footer {
     padding-top: calc(25px + 5%);
     padding-bottom: calc( 25px + 10%);
   }
+  section#works,
+  section#other-concepts {
+    padding-top: 20%;
+    padding-bottom: 20%;
+  }
+
   .content-wrapper .content-column {
     width: 100%;
   }
   .device-wrapper {
     width: 100%;
   }
-  #other-works-wrapper p {
+  #works p {
     width: 90%;
   }
+    .logos a {
+        margin: 8%;
+    }
   .project-tile {
     width: 100%;
   }
