fixed pre-showed initial welcome stuff

--- a/cvStyle.css
+++ b/cvStyle.css
@@ -206,6 +206,10 @@ a {
           }
           #CTA-play {
             cursor: pointer;
+            visibility: hidden;
+          }
+          #wc-text_1 {
+            visibility: hidden;
           }
 
 
