--- a/cvStyle.css
+++ b/cvStyle.css
@@ -157,7 +157,7 @@ a {
 
 
 .playback-control {
-  position: absolute;
+  position: fixed;
   top: 25px;
   right: 25px;
   visibility: hidden;
@@ -172,6 +172,17 @@ a {
     .replay {
       margin-left: 16px;
     }
+
+#skip {
+  font-size: .65rem;
+  font-weight: 400;
+  letter-spacing: .2rem;
+  cursor: pointer;
+  position: fixed;
+  left: 25px;
+  bottom: 25px;
+  visibility: hidden;
+}
 
 /* ----------------------------------------------------------- */
 
